Added classes to track history.

--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <TextView
+        <com.pancholi.binarycalculator.ExtendedTextView
             android:id="@+id/textOperator"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -26,7 +26,7 @@
             android:layout_weight="3"
             android:orientation="vertical">
 
-            <EditText
+            <com.pancholi.binarycalculator.ExtendedEditText
                 android:id="@+id/textInputOne"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -39,7 +39,7 @@
                 android:textIsSelectable="true"
                 android:maxLines="1"/>
 
-            <EditText
+            <com.pancholi.binarycalculator.ExtendedEditText
                 android:id="@+id/textInputTwo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -56,7 +56,7 @@
 
     </LinearLayout>
 
-    <TextView
+    <com.pancholi.binarycalculator.ExtendedTextView
         android:id="@+id/textResult"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
